complete image effects func
